k8s/demo/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test.godemo.art
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/service-upstream: "true"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   proxy_cache static-cache;
    #   proxy_cache_valid any 60m;
    #   add_header X-Cache-Status $upstream_cache_status;
spec:
  rules:
  - host: test.godemo.art
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flutter-service
            port:
              number: 80
  ingressClassName: nginx

---
apiVersion: v1
kind: Service
metadata:
  name: flutter-service
  labels:
    app: test
spec:
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  selector:
    app: test
